--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -200,7 +200,7 @@
             margin-bottom: 20px;
             font-size: 1em;
             font-weight: 500;
-            text-align: left;
+            text-align: center;
             animation: slideIn 0.5s ease-out;
         }
 
